<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeActivity"
    android:id="@+id/cns_home">

    <Button
        android:id="@+id/btn_terms"
        android:layout_width="150dp"
        android:layout_height="114dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:onClick="onTermsClick"
        android:text="@string/terms"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_homeIcon" />

    <Button
        android:id="@+id/btn_courses"
        android:layout_width="150dp"
        android:layout_height="114dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="4dp"
        android:onClick="onCoursesClick"
        android:text="@string/courses"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_homeIcon" />

    <Button
        android:id="@+id/btn_assessments"
        android:layout_width="150dp"
        android:layout_height="114dp"
        android:layout_marginTop="52dp"
        android:onClick="onAssessmentsClick"
        android:text="@string/assessments"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_courses" />

    <ImageView
        android:id="@+id/img_homeIcon"
        android:layout_width="152dp"
        android:layout_height="150dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/home_icon"
        android:src="@drawable/ic_baseline_home_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>